--- a/index.html
+++ b/index.html
@@ -220,17 +220,12 @@
         .cell.correct { border-color: var(--accent-green); box-shadow: inset 0 0 10px rgba(64, 192, 87, 0.5); }
         .cell.too-many { border-color: #fa5252; box-shadow: inset 0 0 10px rgba(250, 82, 82, 0.5); color: #fa5252; }
         .cell.override { background-color: var(--accent-yellow) !important; color: white !important; box-shadow: 0 0 15px rgba(250, 176, 5, 0.6); background-clip: padding-box !important; }
-        .cell.marked { position: relative; opacity: 0.6; }
-        .cell.marked::after {
-            content: '✕';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: #fa5252;
-            font-size: 1.2em;
-            pointer-events: none;
+        .cell.marked { 
+            position: relative; 
+            border: 2px dotted rgba(255, 255, 255, 0.3) !important;
+            background-color: rgba(255, 255, 255, 0.05) !important;
         }
+        /* Removed .cell.marked::after content: '✕' */
 
         .text-btn { cursor: pointer; opacity: 0.4; transition: opacity 0.2s; display: flex; align-items: center; gap: 5px; font-weight: 600; text-transform: uppercase; letter-spacing: 1px; font-size: 13px; }
         .text-btn:hover { opacity: 1; }
